--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@
 
 remote_theme           : "pages-themes/midnight@v0.2.0"
 
+title: [Portfolio]
+description: [A short description of your site's purpose]
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
